crates/schematic/tests/snapshots/generator_test__typescript__const_enums.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "generate(TypeScriptOptions\n{\n    const_enum: true, enum_format: EnumFormat::Enum,\n    ..TypeScriptOptions::default()\n})"
---
// Automatically generated by schematic. DO NOT MODIFY!

/* eslint-disable */

/** Docblock comment. */
export const enum BasicEnum {
	foo,
	bar,
	baz,
}

export type FallbackEnum = 'foo' | 'bar' | 'baz' | string;

/** Some comment. */
export interface AnotherConfig {
	/**
	 * An optional enum.
	 *
	 * @default 'foo'
	 */
	enums: BasicEnum | null;
	/** An optional string. */
	opt: string | null;
}

export type GenConfigFlattened = Record<string, unknown>;

/** @deprecated */
export interface GenConfigBase {
	boolean: boolean;
	date: string;
	datetime: string;
	decimal: string;
	/**
	 * This is a list of `enumerable` values.
	 *
	 * @default 'foo'
	 * @type {'foo' | 'bar' | 'baz'}
	 */
	enums: BasicEnum;
	/**
	 * @default 'foo'
	 * @type {'foo' | 'bar' | 'baz' | string}
	 */
	fallback_enum: FallbackEnum;
	float32: number;
	float64: number;
	indexmap: Record<string, string>;
	indexset: string[] | null;
	json_value: unknown;
	map: Record<string, number>;
	/** **Nested** field. */
	nested: AnotherConfig;
	number: number;
	path: string;
	regex: string;
	rel_path: string;
	string: string;
	time: string;
	toml_value: unknown | null;
	url: string | null;
	uuid: string;
	/** This is a list of strings. */
	vector: string[];
	version: string | null;
	version2: string;
	version_req: string;
	yaml_value: unknown;
}

/** @deprecated */
export type GenConfig = GenConfigBase & GenConfigFlattened;
