crates/schematic/tests/snapshots/generator_test__typescript__partials.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "fs::read_to_string(file).unwrap()"
---
// Automatically generated by schematic. DO NOT MODIFY!

/* eslint-disable */

/** Docblock comment. */
export type BasicEnum = 'foo' | 'bar' | 'baz';

export type FallbackEnum = 'foo' | 'bar' | 'baz' | string;

/** Some comment. */
export interface AnotherConfig {
	/**
	 * An optional enum.
	 *
	 * @default 'foo'
	 */
	enums: BasicEnum | null;
	/** An optional string. */
	opt: string | null;
}

export type GenConfigFlattened = Record<string, unknown>;

/** @deprecated */
export interface GenConfigBase {
	boolean: boolean;
	date: string;
	datetime: string;
	decimal: string;
	/**
	 * This is a list of `enumerable` values.
	 *
	 * @default 'foo'
	 * @type {'foo' | 'bar' | 'baz'}
	 */
	enums: BasicEnum;
	/**
	 * @default 'foo'
	 * @type {'foo' | 'bar' | 'baz' | string}
	 */
	fallback_enum: FallbackEnum;
	float32: number;
	float64: number;
	indexmap: Record<string, string>;
	indexset: string[] | null;
	json_value: unknown;
	map: Record<string, number>;
	/** **Nested** field. */
	nested: AnotherConfig;
	number: number;
	path: string;
	regex: string;
	rel_path: string;
	string: string;
	time: string;
	toml_value: unknown | null;
	url: string | null;
	uuid: string;
	/** This is a list of strings. */
	vector: string[];
	version: string | null;
	version2: string;
	version_req: string;
	yaml_value: unknown;
}

/** @deprecated */
export type GenConfig = GenConfigBase & GenConfigFlattened;

/** Some comment. */
export interface PartialAnotherConfig {
	/**
	 * An optional enum.
	 *
	 * @default 'foo'
	 */
	enums?: BasicEnum | null;
	/** An optional string. */
	opt?: string | null;
}

export type PartialGenConfigFlattened = Record<string, unknown>;

/** @deprecated */
export interface PartialGenConfigBase {
	boolean?: boolean | null;
	date?: string | null;
	datetime?: string | null;
	decimal?: string | null;
	/**
	 * This is a list of `enumerable` values.
	 *
	 * @default 'foo'
	 */
	enums?: BasicEnum | null;
	/** @default 'foo' */
	fallback_enum?: FallbackEnum | null;
	float32?: number | null;
	float64?: number | null;
	indexmap?: Record<string, string> | null;
	indexset?: string[] | null;
	json_value?: unknown | null;
	map?: Record<string, number> | null;
	/** **Nested** field. */
	nested?: PartialAnotherConfig | null;
	number?: number | null;
	path?: string | null;
	regex?: string | null;
	rel_path?: string | null;
	string?: string | null;
	time?: string | null;
	toml_value?: unknown | null;
	url?: string | null;
	uuid?: string | null;
	/** This is a list of strings. */
	vector?: string[] | null;
	version?: string | null;
	version2?: string | null;
	version_req?: string | null;
	yaml_value?: unknown | null;
}

/** @deprecated */
export type PartialGenConfig = PartialGenConfigBase & PartialGenConfigFlattened;
