crates/schematic/tests/snapshots/generator_test__typescript__props_optional_undefined.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "generate(TypeScriptOptions\n{\n    property_format: PropertyFormat::OptionalUndefined,\n    ..TypeScriptOptions::default()\n})"
---
// Automatically generated by schematic. DO NOT MODIFY!

/* eslint-disable */

/** Docblock comment. */
export type BasicEnum = 'foo' | 'bar' | 'baz';

export type FallbackEnum = 'foo' | 'bar' | 'baz' | string;

/** Some comment. */
export interface AnotherConfig {
	/** An optional string. */
	opt?: string | null | undefined;
	/**
	 * An optional enum.
	 *
	 * @default 'foo'
	 */
	enums?: BasicEnum | null | undefined;
}

export type GenConfigFlattened = Record<string, unknown>;

/** @deprecated */
export interface GenConfigBase {
	boolean?: boolean | undefined;
	string?: string | undefined;
	number?: number | undefined;
	float32?: number | undefined;
	float64?: number | undefined;
	/** This is a list of strings. */
	vector?: string[] | undefined;
	map?: Record<string, number> | undefined;
	/**
	 * This is a list of `enumerable` values.
	 *
	 * @default 'foo'
	 * @type {'foo' | 'bar' | 'baz'}
	 */
	enums?: BasicEnum | undefined;
	/**
	 * @default 'foo'
	 * @type {'foo' | 'bar' | 'baz' | string}
	 */
	fallbackEnum?: FallbackEnum | undefined;
	/** **Nested** field. */
	nested?: AnotherConfig | undefined;
	date?: string | undefined;
	datetime?: string | undefined;
	decimal?: string | undefined;
	time?: string | undefined;
	path?: string | undefined;
	regex?: string | undefined;
	relPath?: string | undefined;
	url?: string | null | undefined;
	uuid?: string | undefined;
	version?: string | null | undefined;
	version2?: string | undefined;
	versionReq?: string | undefined;
	jsonValue?: unknown | undefined;
	tomlValue?: unknown | null | undefined;
	yamlValue?: unknown | undefined;
	indexmap?: Record<string, string> | undefined;
	indexset?: string[] | null | undefined;
}

/** @deprecated */
export type GenConfig = GenConfigBase & GenConfigFlattened;
