crates/schematic/tests/snapshots/generator_test__typescript__value_enums.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "generate(TypeScriptOptions\n{ enum_format: EnumFormat::ValuedEnum, ..TypeScriptOptions::default() })"
---
// Automatically generated by schematic. DO NOT MODIFY!

/* eslint-disable */

/** Docblock comment. */
export enum BasicEnum {
	Foo = 'foo',
	Bar = 'bar',
	Baz = 'baz',
}

export type FallbackEnum = 'foo' | 'bar' | 'baz' | string;

/** Some comment. */
export interface AnotherConfig {
	/** An optional string. */
	opt: string | null;
	/**
	 * An optional enum.
	 *
	 * @default 'foo'
	 */
	enums: BasicEnum | null;
}

export type GenConfigFlattened = Record<string, unknown>;

/** @deprecated */
export interface GenConfigBase {
	boolean: boolean;
	string: string;
	number: number;
	float32: number;
	float64: number;
	/** This is a list of strings. */
	vector: string[];
	map: Record<string, number>;
	/**
	 * This is a list of `enumerable` values.
	 *
	 * @default 'foo'
	 * @type {'foo' | 'bar' | 'baz'}
	 */
	enums: BasicEnum;
	/**
	 * @default 'foo'
	 * @type {'foo' | 'bar' | 'baz' | string}
	 */
	fallbackEnum: FallbackEnum;
	/** **Nested** field. */
	nested: AnotherConfig;
	date: string;
	datetime: string;
	decimal: string;
	time: string;
	path: string;
	regex: string;
	relPath: string;
	url: string | null;
	uuid: string;
	version: string | null;
	version2: string;
	versionReq: string;
	jsonValue: unknown;
	tomlValue: unknown | null;
	yamlValue: unknown;
	indexmap: Record<string, string>;
	indexset: string[] | null;
}

/** @deprecated */
export type GenConfig = GenConfigBase & GenConfigFlattened;
